# emotionics

./: LICENSE  README.md  pyproject.toml
docs/: THEORY.md  scopeofemotionics.md
src/emotionics/: __init__.py  core.py  full.py  lite.py  schema.py
src/emotionics/assets/: emotions.json
src/emotionics/providers/: __init__.py  gemini.py
