[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotionics"
version = "0.2.3"
description = "Emotionics API (Python library)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Kouhei Takagi" }]
dependencies = []
keywords = ["affective-computing", "emotional-logic", "agi-safety", "emotion-math", "emotionics"]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=0.1.0"]

[project.urls]
Homepage = "https://github.com/Kouhei-Takagi/emotionics"
Documentation = "https://github.com/Kouhei-Takagi/emotionics#readme"
Source = "https://github.com/Kouhei-Takagi/emotionics"
Issues = "https://github.com/Kouhei-Takagi/emotionics/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
emotionics = ["assets/*.json"]