[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotionics"
version = "0.3.1"
description = "Emotionics API (Python library)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Spatial Dual License (See README.md)" }
authors = [
    { name = "Kouhei Takagi"}
]
dependencies = []
keywords = ["affective-computing", "emotional-logic", "agi-safety", "emotion-math", "emotionics"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=0.1.0"]

[project.urls]
Homepage = "https://github.com/Kouhei-Takagi/emotionics"
Documentation = "https://github.com/Kouhei-Takagi/emotionics#readme"
Source = "https://github.com/Kouhei-Takagi/emotionics"
Issues = "https://github.com/Kouhei-Takagi/emotionics/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
emotionics = ["assets/*.json"]